--- a/Integrated_HP.html
+++ b/Integrated_HP.html
@@ -324,9 +324,17 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 right">
+                            
+                                <div class="col-md-12 mx-auto">
+
                             <div class="row block-sept">
                                 <div class="col-md-12">
-                                    <p class="book orange">In the case shown, the patient will supposedly not be able to trigger celiac disease because there is no presence of the HLA alleles responsible for the disease. Thanks to the diagnosis of Roger Compte and the few doctors from Sant Joan de Déu Hospital that helped us to understand the main strategy in the diagnosis of this disease, we could focus our project to the usage of HLA molecules.</p>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <p class="book orange">In the case shown, the patient will supposedly not be able to trigger celiac disease because there is no presence of the HLA alleles responsible for the disease. Thanks to the diagnosis of Roger Compte and the few doctors from Sant Joan de Déu Hospital that helped us to understand the main strategy in the diagnosis of this disease, we could focus our project to the usage of HLA molecules.</p>
+                                        </div>
+                                    </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -391,21 +399,26 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 right">
-                            <div class="row block-sept">
-                                <div class="col-md-12">
-                                    <p class="book orange">In the case shown, the patient will supposedly not be able to trigger celiac disease because there is no presence of the HLA alleles responsible for the disease. Thanks to the diagnosis of Roger Compte and the few doctors from Sant Joan de Déu Hospital that helped us to understand the main strategy in the diagnosis of this disease, we could focus our project to the usage of HLA molecules.</p>
+                            <div class="col-md-12 mx-auto">
+                                <div class="row block-sept">
+                                    <div class="col-md-12">
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <p class="book orange">In the case shown, the patient will supposedly not be able to trigger celiac disease because there is no presence of the HLA alleles responsible for the disease. Thanks to the diagnosis of Roger Compte and the few doctors from Sant Joan de Déu Hospital that helped us to understand the main strategy in the diagnosis of this disease, we could focus our project to the usage of HLA molecules.</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-6 left">
                             <div class="col-md-12 mx-auto">
-
                                 <div class="row block-sept">
                                     <div class="col-md-12">
                                         <div class="row">
                                             <div class="col-md-12">
-                                                <p class="book orange"> Another thing that we have to consider when we talk about celiac disease is that the damage of the small intestine can lead to colon cancer, and so a disease which is considered mild can turn to a serious illness in a few years if gluten is not strictly removed from the diet. These details made us realize how damaging a cross-contamination or non-reliable gluten-free food can be for these patients.</p>
+                                                <p class="book orange">Another thing that we have to consider when we talk about celiac disease is that the damage of the small intestine can lead to colon cancer, and so a disease which is considered mild can turn to a serious illness in a few years if gluten is not strictly removed from the diet. These details made us realize how damaging a cross-contamination or non-reliable gluten-free food can be for these patients.</p>
                                                 <p class="book orange">Thank you so much Carme for your valuable advice, we learned a lot from you!</p>
                                             </div>
                                         </div>
